--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
+  "name": "next-portfolio-ghpages",
+  "private": true,
+  "version": "1.0.0",
+  "scripts": { "dev": "next dev", "build": "next build", "export": "next export" },
+  "dependencies": {
+    "framer-motion": "^11.0.0",
+    "next": "^14.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18"
+    "@types/node": "^18.19.0",
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.12",
+    "typescript": "^5.6.2"
   }
 }
